init rollupv2 wrk